feat: Replaced 'DOM' based `d3` horizontal chart implementation with string templates
