# platform/src/apis/Platform.Api.ChartRendering/src/functions/horizontalBarChart/route.ts
@@ -1,8 +1,16 @@
 import { app } from "@azure/functions";
 import { horizontalBarChart } from "./function";
+import { horizontalBarChartDom } from "./dom/function";
 
 app.http("horizontalBarChart", {
   methods: ["POST"],
   authLevel: "admin",
   handler: horizontalBarChart,
+});
+
+app.http("horizontalBarChartDom", {
+  route: "horizontalBarChart/dom",
+  methods: ["POST"],
+  authLevel: "admin",
+  handler: horizontalBarChartDom,
 });
