# platform/src/apis/Platform.Api.ChartRendering/src/openapi/horizontalBarChart/api.ts
@@ -28,3 +28,26 @@ export type GetHorizontalBarChartApi = ApiMapper<{
     "500": { error: string };
   };
 }>;
+
+/**
+ * Generates a single or multiple horizontal bar chart(s) based on whether payload in a single object or an array
+ * @summary Builds a horizontal bar chart using D3 in the DOM
+ * @tags DOM
+ * @body.description Bar chart payload
+ * @body.contentType application/json
+ */
+export type GetHorizontalBarChartDomApi = ApiMapper<{
+  path: "/api/horizontalBarChart/dom";
+  method: "POST";
+  body: HorizontalBarChartPayload;
+  responses: {
+    /**
+     * @contentType application/json
+     */
+    "200": ChartBuilderResult | string;
+    /**
+     * @contentType application/json
+     */
+    "500": { error: string };
+  };
+}>;
