# platform/src/apis/Platform.Api.ChartRendering/src/openapi/index.ts
@@ -1,3 +1,6 @@
 export { GetHealthApi } from "./healthCheck/api";
-export { GetHorizontalBarChartApi } from "./horizontalBarChart/api";
+export {
+  GetHorizontalBarChartApi,
+  GetHorizontalBarChartDomApi,
+} from "./horizontalBarChart/api";
 export { GetVerticalBarChartApi } from "./verticalBarChart/api";
